...
    otherUserName: string;
  };
};

// Main Tab Navigation Params
export type MainTabParamList = {
  Home: NavigatorScreenParams<GroupStackParamList>; // <-- Specify params for Home stack
  Meetings: undefined;
  Messages: NavigatorScreenParams<MessagesStackParamList>; // <-- Messages stack
  Treasury: undefined;
  Profile: NavigatorScreenParams<ProfileStackParamList>; // <-- Specify params for Profile stack
  GroupSearch: undefined;
  AdminPanel: undefined;
...
